crates/cpg-schema/tests/snapshots/contracts__syntax_nodes.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table syntax_nodes
family syntax
key snapshot_id, module_node_id, start_byte, end_byte, node_id
check span_order: start_byte >= 0 AND end_byte >= start_byte
check ordinal_nonnegative: ordinal >= 0
@lctx.family=syntax
@lctx.table=syntax_nodes
snapshot_id: FixedSizeBinary(16) NOT NULL
fact_id: FixedSizeBinary(16) NOT NULL
node_id: FixedSizeBinary(16) NOT NULL
module_node_id: FixedSizeBinary(16) NOT NULL
owner_node_id: FixedSizeBinary(16) NULL
parent_node_id: FixedSizeBinary(16) NOT NULL
kind: Int16 NOT NULL [lctx.codebook=syntax_kind]
field: Int16 NOT NULL [lctx.codebook=syntax_field]
ordinal: Int64 NOT NULL
start_byte: Int64 NOT NULL
end_byte: Int64 NOT NULL
detail: Utf8 NULL
