crates/cpg-schema/tests/snapshots/contracts__synthetic_callables.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table synthetic_callables
family signatures
key snapshot_id, node_id
@lctx.family=signatures
@lctx.table=synthetic_callables
snapshot_id: FixedSizeBinary(16) NOT NULL
node_id: FixedSizeBinary(16) NOT NULL
module_node_id: FixedSizeBinary(16) NOT NULL
function_key: Utf8 NOT NULL
pysa_fact_id: FixedSizeBinary(16) NOT NULL
