crates/cpg-schema/tests/snapshots/contracts__type_binders.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table type_binders
family types
key snapshot_id, term_node_id
@lctx.family=types
@lctx.table=type_binders
snapshot_id: FixedSizeBinary(16) NOT NULL
term_node_id: FixedSizeBinary(16) NOT NULL
term_fact_id: FixedSizeBinary(16) NOT NULL
binder_node_id: FixedSizeBinary(16) NULL
reason: Int16 NULL [lctx.codebook=boundary_reason]
